# AwesomeStudioPedal

./: .clang-format  .clang-tidy  .envrc.example  .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONFIGURATION.md  CONFIG_SUMMARY.md  CONFIG_SYSTEM.md  CONTRIBUTING.md  CONTRIBUTION_GUIDELINE.md  CONTRIBUTORS.md  Doxyfile  FIXES.md  Makefile  README.md  README_data.md  REPOSITORY_IMPROVEMENT_CONCEPT.md  SECURITY.md  SERIAL_OUTPUT_ENHANCEMENT.md  TESTING_IMPLEMENTATION.md  TESTING_STATUS.md  compile_commands.json  implementationplan.md  package-lock.json  package.json  partitions.csv  platformio.ini  requirements-schematic.txt  requirements.txt
.claude/: settings.json
.devcontainer/: .env.example  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: app.yml  codeql-analysis.yml  dependabot-automerge.yml  docs.yml  flutter.yml  profiles.yml  release.yml  static-analysis.yml  test.yml
.vibe/: config.toml
app/: README.md  analysis_options.yaml  pubspec.yaml
app/android/: .gitignore  local.properties
app/assets/: config.schema.json  profiles.schema.json
app/docs/: EMULATOR_SETUP.md
app/ios/: Podfile
app/lib/: app.dart  main.dart
awesome-task-system/scripts/: housekeep.py  release_snapshot.py  update_idea_overview.py  update_task_overview.py
config/esp32/: partitions.csv
data/: README.md  config.json  config.schema.json  pedal_config.json  profiles.json  profiles.schema.json
docs/: CONFIG_SUMMARY.md  CONFIG_SYSTEM.md  CONTRIBUTION_GUIDELINE.md  DATA_UPLOAD.md  DEPLOYMENT.md  PARTITIONS.md  RELEASE_CHECKLIST.md  TESTING_IMPLEMENTATION.md  building.md
docs/builders/: APP.md  BUILD_GUIDE.md  CLI_TOOL.md  FLASHING.md  HARDWARE_CONFIG.md  KEY_REFERENCE.md
docs/data/: README.md
docs/design/: ASP-design-review.html  README.md
docs/developers/: ADDING_HARDWARE.md  ANDROID_TEST_MATRIX.md  APP_CONTENT_PAGES_DECISIONS.md  ARCHITECTURE.md  BLE_CONFIG_IMPLEMENTATION_NOTES.md  BLE_CONFIG_PROTOCOL.md  BLE_READBACK_IMPACT.md  BRANCH_PROTECTION_CONCEPT.md  CI_PIPELINE.md  CLAUDE_RECAP.md  CLAUDE_REVIEW.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  COMMIT_POLICY.md  DEVELOPMENT_SETUP.md  FEATURE_TEST_PLAN.md  KNOWN_ISSUES.md  MERMAID_STYLE_GUIDE.md  SECURITY_REVIEW.md  TASK_SYSTEM.md  TESTING.md
docs/media/: AwesomeStudioPedal_esp32_wiring.fzz
docs/musicians/: PROFILES.md  USER_GUIDE.md
docs/simulator/: index.html  simulator.js  styles.css
docs/tools/: asp.css  profiles-gallery.js  version.js
include/: bank_manager.h  ble_pedal_app.h  button.h  config.h  event_dispatcher.h  i_ble_keyboard.h  pedal_app.h  platform.h  send.h  version.h
include/hardware/: button_controller.h  i_led_controller.h  led_controller.h
lib/PedalLogic/: library.json
profiles/: CONTRIBUTING.md  index.json
profiles/1-button/: play-pause-media.json  shutter-delayed.json
profiles/2-button/: daw-transport-minimal.json  logic-pro-tracking.json  page-turner-basic.json  pixel-camera-remote.json  vlc-practice.json  zoom-mute-toggle.json
profiles/3-button/: podcast-control.json
profiles/4-button/: ableton-looper.json  discord-comms.json  lightroom-culling.json  obs-stream-deck.json  score-navigator.json
scripts/: README.md  check-minbuttons.js  check_code_smells.py  claude_recap.py  claude_review.py  cleanup-releases.sh  commit-pathspec.sh  format-code.sh  generate-profiles-index.js  generate-schematic.py  generate_hid_display_table.py  housekeep.py  install_git_hooks.sh  migrate_tasks.py  organize_closed_tasks.py  pedal_config.py  pre-commit  release_burnup.py  requirements.txt  screenshot.py  security_review_changes.py  serial_monitor.py  sync_skills_config.py  sync_task_system.py  test-config-builder-independent-actions.js  test-simulator-independent-actions.js  update_future_ideas.py  update_idea_overview.py  update_task_overview.py  validate-profiles.js  validate_mermaid.py
scripts/hid_display_data/: consumer_0x0c.yaml  keyboard_keypad_0x07.yaml  overlay.yaml
scripts/tests/: test_commit_pathspec.py  test_commit_provenance.py  test_generate_hid_display_table.py  test_housekeep.py  test_pedal_config.py  test_update_idea_overview.py
src/: bank_manager.cpp  ble_pedal_app.cpp  button.cpp  config.cpp  event_dispatcher.cpp  main.cpp  pedal_app.cpp  send.cpp
src/adapters/: ble_keyboard_adapter.h
src/esp32/: main.cpp
src/hardware/: button_controller.cpp  led_controller.cpp
test/: CMakeLists.txt  README  README.md  test_config_loader.cpp  test_main.cpp
test/fakes/: Arduino.h  arduino_shim.cpp  arduino_shim.h  hardware_config_fake.cpp  null_led_controller.h  null_logger.h
test/mock/: mock_ble_keyboard.h  mock_button_controller.h  mock_led_controller.h
test/mocks/: mock_ble_keyboard.h  mock_led_controller.h
test/test_ble_config_esp32/: runner.py  test_main.cpp
test/test_ble_config_esp32/data/: config.json
test/test_ble_pairing_esp32/: runner.py
test/test_buttons/: test_main.cpp
test/test_buttons_esp32/: test_main.cpp
test/test_buttons_nrf52840/: test_main.cpp
test/test_config_loader/: test_main.cpp
test/test_gpio2_probe_esp32/: test_main.cpp
test/test_leds_shared/: test_main.cpp
test/test_multipress_esp32/: test_main.cpp
test/test_pin_io_esp32/: test_main.cpp
test/test_profilemanager_esp32/: test_main.cpp
test/test_profilemanager_nrf52840/: test_main.cpp
test/test_serial_output_esp32/: test_main.cpp
test/test_serial_output_nrf52840/: test_main.cpp
test/tools/: ui_find.py
test/unit/: test_action_json_roundtrip.cpp  test_action_parsing.cpp  test_app_integration.cpp  test_bank_manager.cpp  test_ble_config_service.cpp  test_button.cpp  test_button_controller.cpp  test_config_loader.cpp  test_event_dispatcher.cpp  test_hardware_mismatch.cpp  test_host_pedal_app.cpp  test_independent_actions.cpp  test_led_controller.cpp  test_macro_action.cpp  test_non_keyboard_actions.cpp  test_pin_action.cpp  test_profile_manager.cpp  test_send.cpp
(+964 files in other folders)
